--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -1,5 +1,5 @@
 ---
-abstract: unknown
+abstract: 'A very simple color screen output'
 author:
   - 'Takashi Uesugi <tksuesg@gmail.com>'
 build_requires:
@@ -18,6 +18,14 @@ no_index:
     - t
     - inc
 requires:
+  Carp: 0
   Test::More: 0
+  Test::Perl::Critic: 0
+  Test::Pod: 1.14
+  Test::Pod::Coverage: 1.04
+  base: 0
+  strict: 0
+  utf8: 0
   version: 0
-version: ''
+  warnings: 0
+version: v0.0.1
